--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/chance": "^0.7.31",
     "@types/cucumber": "0.0.35",
     "@types/mocha": "^2.2.33",
+    "@types/mockery": "^1.4.29",
     "@types/node": "^6.0.46",
     "@types/sinon": "^1.16.32",
     "chai": "^3.5.0",
@@ -20,6 +21,7 @@
     "cucumber": "^2.0.0-rc.6",
     "istanbul": "^1.1.0-alpha.1",
     "mocha": "^3.2.0",
+    "mockery": "^2.0.0",
     "npm-run-all": "^3.1.2",
     "rimraf": "latest",
     "sinon": "^1.17.6",
