chore: Use the local typescript version

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,7 +28,7 @@
     "coverage/**": true
   },
   "npm-intellisense.scanDevDependencies": true,
-  "typescript.check.workspaceVersion": false,
+  "typescript.tsdk": "./node_modules/typescript/lib",
   "typescriptHero.resolver.pathStringDelimiter": "\"",
   "typescriptHero.restartDebugger.active": false
 }
