chore: Add Gherkin Indent as recommended extension

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
 	"recommendations": [
+    "AravindKumar.gherkin-indent",
     "EditorConfig.EditorConfig",
     "Shan.code-settings-sync",
     "Tyriar.sort-lines",
