--- a/package.json
+++ b/package.json
@@ -70,15 +70,15 @@
     "predeploy": "npm run test",
     "release": "cross-env NODE_ENV=production npm-run-all clean build test",
     "test:unit": "mocha --opts mocha.opts",
-    "test:unit:coverage": "istanbul cover --include-all-sources --report html --dir coverage/unit node_modules/mocha/bin/_mocha -- --opts mocha.opts",
+    "test:unit:coverage": "istanbul cover --include-all-sources --dir coverage/unit node_modules/mocha/bin/_mocha -- --opts mocha.opts",
     "test:unit:coverage:noreport": "istanbul cover --include-all-sources --report none --dir coverage/unit node_modules/mocha/bin/_mocha -- --opts mocha.opts",
     "test:unit:coverage:check": "istanbul check-coverage --root coverage/unit",
     "test:spec:features": "node -r source-map-support/register node_modules/cucumber/bin/cucumber.js spec/features",
-    "test:spec:features:coverage": "istanbul cover --include-all-sources --report html --dir coverage/spec/features node_modules/cucumber/bin/cucumber.js spec/features",
+    "test:spec:features:coverage": "istanbul cover --include-all-sources --dir coverage/spec/features node_modules/cucumber/bin/cucumber.js spec/features",
     "test:spec:features:coverage:noreport": "istanbul cover --include-all-sources --report none --dir coverage/spec/features node_modules/cucumber/bin/cucumber.js spec/features",
     "test:spec:features:coverage:check": "istanbul check-coverage --root coverage/spec/features",
     "test:spec": "npm-run-all -p test:spec:*",
-    "test": "npm-run-all -p lint:*:** test:**:coverage:noreport -s test:unit:coverage:check",
+    "test": "npm-run-all -p lint:*:** test:**:coverage -s test:unit:coverage:check",
     "watch:build": "watch \"npm-run-all build:**:src\" src",
     "watch": "npm-run-all -p watch:**"
   },
