--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chance": "^1.0.4",
     "cross-env": "^3.1.3",
     "cucumber": "^2.0.0-rc.6",
+    "env-cmd": "^5.0.0",
     "istanbul": "^1.1.0-alpha.1",
     "mocha": "^3.2.0",
     "mockery": "^2.0.0",
