--- a/package.json
+++ b/package.json
@@ -12,28 +12,29 @@
   "devDependencies": {
     "@types/chai": "^3.4.34",
     "@types/chance": "^0.7.31",
-    "@types/cucumber": "0.0.35",
+    "@types/cucumber": "^2.0.0",
     "@types/mocha": "^2.2.33",
     "@types/mockery": "^1.4.29",
     "@types/node": "^6.0.46",
-    "@types/sinon": "^1.16.32",
+    "@types/sinon": "^2.2.0",
     "chai": "^3.5.0",
     "chance": "^1.0.4",
-    "cross-env": "^3.1.3",
+    "cross-env": "^4.0.0",
     "cucumber": "^2.0.0-rc.6",
     "env-cmd": "^5.0.0",
     "istanbul": "^1.1.0-alpha.1",
-    "mocha": "^3.2.0",
+    "mocha": "^3.3.0",
     "mockery": "^2.0.0",
-    "npm-run-all": "^3.1.2",
+    "npm-run-all": "^4.0.0",
     "rimraf": "latest",
-    "sinon": "^1.17.6",
+    "sinon": "^2.2.0",
     "source-map-support": "^0.4.6",
-    "tslint": "^3.15.1",
-    "tslint-microsoft-contrib": "^2.0.13",
+    "tslib": "^1.7.0",
+    "tslint": "^5.2.0",
+    "tslint-microsoft-contrib": "^4.0.0",
     "typemoq": "^1.0.2",
-    "typescript": "^2.2.0",
-    "typescript-formatter": "^4.0.0",
+    "typescript": "^2.3.0",
+    "typescript-formatter": "^5.1.0",
     "watch": "latest"
   },
   "directories": {
@@ -65,10 +66,10 @@
     "format:ts:spec:features": "tsfmt -r --baseDir spec/features",
     "format:ts:src": "tsfmt -r --baseDir src",
     "format": "npm-run-all -p format:**",
-    "lint:ts:spec:features": "tslint --type-check -c tslint.json spec/features/**/*.ts",
-    "lint:ts:src": "tslint --type-check -c tslint.json src/**/*.ts",
+    "lint:ts:spec:features": "tslint --type-check -c tslint.json -p spec/features/tsconfig.json",
+    "lint:ts:src": "tslint --type-check -c tslint.json -p src/tsconfig.json",
     "lint:src": "npm-run-all lint:*:**:src",
-    "lint": "npm-run-all -p lint:*:**",
+    "lint": "npm-run-all -p lint:*",
     "predeploy": "npm run test",
     "release": "cross-env NODE_ENV=production npm-run-all clean build test",
     "test:unit": "mocha --opts mocha.opts",
