--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,7 +28,7 @@
       "type": "node",
       "request": "attach",
       "name": "Attach to Process",
-      "port": 5858,
+      "processId": "${command:PickProcess}",
       "outFiles": [],
       "sourceMaps": true
     },
