Change to using nyc to run code coverage, add support for combined code coverage reports and checks

--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "@types/sinon": "^2.2.0",
     "chai": "^3.5.0",
     "chance": "^1.0.4",
+    "copyfiles": "^1.2.0",
     "cross-env": "^4.0.0",
     "cucumber": "^2.0.0-rc.6",
     "env-cmd": "^5.0.0",
-    "istanbul": "^1.1.0-alpha.1",
     "mocha": "^3.3.0",
     "mockery": "^2.0.0",
     "npm-run-all": "^4.0.0",
+    "nyc": "^11.0.2",
     "rimraf": "latest",
     "sinon": "^2.2.0",
     "source-map-support": "^0.4.6",
@@ -50,6 +51,29 @@
   "license": "UNLICENSED",
   "main": "dist/index.js",
   "name": "ref-boilerplate-core",
+  "nyc": {
+    "clean": true,
+    "check-coverage": false,
+    "per-file": true,
+    "statements": 100,
+    "branches": 100,
+    "functions": 100,
+    "lines": 100,
+    "include": [
+      "dist/**/*.js"
+    ],
+    "reporter": [
+      "html",
+      "text"
+    ],
+    "exclude": [
+      "dist/index.js",
+      "dist/main.js",
+      "dist/**/*.test.js"
+    ],
+    "cache": false,
+    "all": true
+  },
   "private": true,
   "repository": {
     "type": "git",
@@ -72,16 +96,20 @@
     "lint": "npm-run-all -p lint:*",
     "predeploy": "npm run test",
     "release": "cross-env NODE_ENV=production npm-run-all clean build test",
+    "test:coverage": "npm-run-all -s test:coverage:collect test:coverage:report test:coverage:check",
+    "test:coverage:collect": "rimraf coverage/combined && copyfiles -f coverage/spec/features/.nyc_output/*.* coverage/unit/.nyc_output/*.* coverage/combined/.nyc_output",
+    "test:coverage:report": "nyc report --temp-directory coverage/combined/.nyc_output --report-dir coverage/combined",
+    "test:coverage:check": "nyc check-coverage --temp-directory coverage/combined/.nyc_output",
     "test:unit": "mocha --opts mocha.opts",
-    "test:unit:coverage": "istanbul cover --include-all-sources --dir coverage/unit node_modules/mocha/bin/_mocha -- --opts mocha.opts",
-    "test:unit:coverage:noreport": "istanbul cover --include-all-sources --report none --dir coverage/unit node_modules/mocha/bin/_mocha -- --opts mocha.opts",
-    "test:unit:coverage:check": "istanbul check-coverage --root coverage/unit",
+    "test:unit:coverage": "nyc --temp-directory coverage/unit/.nyc_output --report-dir coverage/unit mocha --opts mocha.opts",
+    "test:unit:coverage:noreport": "nyc --temp-directory coverage/unit/.nyc_output -r none mocha --opts mocha.opts",
+    "test:unit:coverage:check": "nyc check-coverage --temp-directory coverage/unit/.nyc_output",
     "test:spec:features": "node -r source-map-support/register node_modules/cucumber/bin/cucumber.js spec/features",
-    "test:spec:features:coverage": "istanbul cover --include-all-sources --dir coverage/spec/features node_modules/cucumber/bin/cucumber.js spec/features",
-    "test:spec:features:coverage:noreport": "istanbul cover --include-all-sources --report none --dir coverage/spec/features node_modules/cucumber/bin/cucumber.js spec/features",
-    "test:spec:features:coverage:check": "istanbul check-coverage --root coverage/spec/features",
+    "test:spec:features:coverage": "nyc --temp-directory coverage/spec/features/.nyc_output --report-dir coverage/spec/features node -r source-map-support/register node_modules/cucumber/bin/cucumber.js spec/features",
+    "test:spec:features:coverage:noreport": "nyc --temp-directory coverage/spec/features/.nyc_output -r none node -r source-map-support/register node_modules/cucumber/bin/cucumber.js spec/features",
+    "test:spec:features:coverage:check": "nyc check-coverage --temp-directory coverage/spec/features/.nyc_output",
     "test:spec": "npm-run-all -p test:spec:*",
-    "test": "npm-run-all -p lint:*:** test:**:coverage -s test:unit:coverage:check",
+    "test": "npm-run-all -p lint:*:** test:**:coverage:noreport -s test:coverage",
     "watch:build": "watch \"npm-run-all build:**:src\" src",
     "watch": "npm-run-all -p watch:**"
   },
