--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cross-env": "^4.0.0",
     "cucumber": "^2.0.0-rc.6",
     "env-cmd": "^5.0.0",
+    "mkdirp": "^0.5.1",
     "mocha": "^3.3.0",
     "mockery": "^2.0.0",
     "npm-run-all": "^4.0.0",
@@ -50,7 +51,7 @@
   "homepage": "https://bitbucket.org/minfos/ref-boilerplate-core#readme",
   "license": "UNLICENSED",
   "main": "dist/index.js",
-  "name": "ref-boilerplate-core",
+  "name": "@minfos/ref-boilerplate-core",
   "nyc": {
     "clean": true,
     "check-coverage": false,
@@ -94,6 +95,8 @@
     "lint:ts:src": "tslint --type-check -c tslint.json -p src/tsconfig.json",
     "lint:src": "npm-run-all lint:*:**:src",
     "lint": "npm-run-all -p lint:*",
+    "package": "rimraf temp/package && node build/pre-pack.js temp/package && npm pack temp/package",
+    "publish": "rimraf temp/package && node build/pre-pack.js temp/package && npm publish temp/package",
     "predeploy": "npm run test",
     "release": "cross-env NODE_ENV=production npm-run-all clean build test",
     "test:coverage": "npm-run-all -s test:coverage:collect test:coverage:report test:coverage:check",
