chore: Add src/*.ts files code coverage to address an issue introduced by nyc

--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "functions": 100,
     "lines": 100,
     "include": [
-      "dist/**/*.js"
+      "dist/**/*.js",
+      "src/**/*.ts"
     ],
     "reporter": [
       "html",
