--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -10,7 +10,8 @@
     "sourceMap": true,
     "strictNullChecks": true,
     "stripInternal": true,
-    "target": "ES6",
+    "target": "es2017",
+    "lib": ["es2017"],
     "typeRoots": [
       "../node_modules/@types",
       "../vendor/definitions"
