--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "@types/chai": "^3.4.34",
     "@types/chance": "^0.7.31",
-    "@types/cucumber": "^2.0.0",
+    "@types/cucumber": "^4.0.4",
     "@types/mocha": "^2.2.33",
     "@types/mockery": "^1.4.29",
     "@types/node": "^8",
@@ -21,7 +21,7 @@
     "chance": "^1.0.4",
     "copyfiles": "^1.2.0",
     "cross-env": "^4.0.0",
-    "cucumber": "^2.0.0-rc.6",
+    "cucumber": "^5.0.2",
     "env-cmd": "^5.0.0",
     "mkdirp": "^0.5.1",
     "mocha": "^3.3.0",
@@ -107,9 +107,9 @@
     "test:unit:coverage": "nyc --temp-directory coverage/unit/.nyc_output --report-dir coverage/unit mocha --opts mocha.opts",
     "test:unit:coverage:noreport": "nyc --temp-directory coverage/unit/.nyc_output -r none mocha --opts mocha.opts",
     "test:unit:coverage:check": "nyc check-coverage --temp-directory coverage/unit/.nyc_output",
-    "test:spec:features": "node -r source-map-support/register node_modules/cucumber/bin/cucumber.js spec/features",
-    "test:spec:features:coverage": "nyc --temp-directory coverage/spec/features/.nyc_output --report-dir coverage/spec/features node -r source-map-support/register node_modules/cucumber/bin/cucumber.js spec/features",
-    "test:spec:features:coverage:noreport": "nyc --temp-directory coverage/spec/features/.nyc_output -r none node -r source-map-support/register node_modules/cucumber/bin/cucumber.js spec/features",
+    "test:spec:features": "node -r source-map-support/register node_modules/cucumber/bin/cucumber-js spec/features",
+    "test:spec:features:coverage": "nyc --temp-directory coverage/spec/features/.nyc_output --report-dir coverage/spec/features node -r source-map-support/register node_modules/cucumber/bin/cucumber-js spec/features",
+    "test:spec:features:coverage:noreport": "nyc --temp-directory coverage/spec/features/.nyc_output -r none node -r source-map-support/register node_modules/cucumber/bin/cucumber-js spec/features",
     "test:spec:features:coverage:check": "nyc check-coverage --temp-directory coverage/spec/features/.nyc_output",
     "test:spec": "npm-run-all -p test:spec:*",
     "test": "npm-run-all -p lint:*:** test:**:coverage:noreport -s test:coverage",
