--- a/spec/features/tsconfig.json
+++ b/spec/features/tsconfig.json
@@ -6,7 +6,8 @@
     "jsx": "preserve",
     "module": "commonjs",
     "sourceMap": true,
-    "target": "ES6",
+    "target": "es2017",
+    "lib": ["es2017"],
     "typeRoots": [
       "../../node_modules/@types",
       "../../vendor/definitions"
