--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "mocha": "^3.3.0",
     "mockery": "^2.0.0",
     "npm-run-all": "^4.0.0",
-    "nyc": "^11.0.2",
+    "nyc": "^13.1.0",
     "rimraf": "latest",
     "sinon": "^2.2.0",
     "source-map-support": "^0.4.6",
@@ -91,8 +91,8 @@
     "format:ts:spec:features": "tsfmt -r --baseDir spec/features",
     "format:ts:src": "tsfmt -r --baseDir src",
     "format": "npm-run-all -p format:**",
-    "lint:ts:spec:features": "tslint --type-check -c tslint.json -p spec/features/tsconfig.json",
-    "lint:ts:src": "tslint --type-check -c tslint.json -p src/tsconfig.json",
+    "lint:ts:spec:features": "tslint -c tslint.json -p spec/features/tsconfig.json",
+    "lint:ts:src": "tslint -c tslint.json -p src/tsconfig.json",
     "lint:src": "npm-run-all lint:*:**:src",
     "lint": "npm-run-all -p lint:*",
     "package": "rimraf temp/package && node build/pre-pack.js temp/package && npm pack temp/package",
@@ -101,16 +101,16 @@
     "release": "cross-env NODE_ENV=production npm-run-all clean build test",
     "test:coverage": "npm-run-all -s test:coverage:collect test:coverage:report test:coverage:check",
     "test:coverage:collect": "rimraf coverage/combined && copyfiles -f coverage/spec/features/.nyc_output/*.* coverage/unit/.nyc_output/*.* coverage/combined/.nyc_output",
-    "test:coverage:report": "nyc report --temp-directory coverage/combined/.nyc_output --report-dir coverage/combined",
-    "test:coverage:check": "nyc check-coverage --temp-directory coverage/combined/.nyc_output",
+    "test:coverage:report": "nyc report --temp-dir coverage/combined/.nyc_output --report-dir coverage/combined",
+    "test:coverage:check": "nyc check-coverage --temp-dir coverage/combined/.nyc_output",
     "test:unit": "mocha --opts mocha.opts",
-    "test:unit:coverage": "nyc --temp-directory coverage/unit/.nyc_output --report-dir coverage/unit mocha --opts mocha.opts",
-    "test:unit:coverage:noreport": "nyc --temp-directory coverage/unit/.nyc_output -r none mocha --opts mocha.opts",
-    "test:unit:coverage:check": "nyc check-coverage --temp-directory coverage/unit/.nyc_output",
+    "test:unit:coverage": "nyc --temp-dir coverage/unit/.nyc_output --report-dir coverage/unit mocha --opts mocha.opts",
+    "test:unit:coverage:noreport": "nyc --temp-dir coverage/unit/.nyc_output -r none mocha --opts mocha.opts",
+    "test:unit:coverage:check": "nyc check-coverage --temp-dir coverage/unit/.nyc_output",
     "test:spec:features": "node -r source-map-support/register node_modules/cucumber/bin/cucumber-js spec/features",
-    "test:spec:features:coverage": "nyc --temp-directory coverage/spec/features/.nyc_output --report-dir coverage/spec/features node -r source-map-support/register node_modules/cucumber/bin/cucumber-js spec/features",
-    "test:spec:features:coverage:noreport": "nyc --temp-directory coverage/spec/features/.nyc_output -r none node -r source-map-support/register node_modules/cucumber/bin/cucumber-js spec/features",
-    "test:spec:features:coverage:check": "nyc check-coverage --temp-directory coverage/spec/features/.nyc_output",
+    "test:spec:features:coverage": "nyc --temp-dir coverage/spec/features/.nyc_output --report-dir coverage/spec/features node -r source-map-support/register node_modules/cucumber/bin/cucumber-js spec/features",
+    "test:spec:features:coverage:noreport": "nyc --temp-dir coverage/spec/features/.nyc_output -r none node -r source-map-support/register node_modules/cucumber/bin/cucumber-js spec/features",
+    "test:spec:features:coverage:check": "nyc check-coverage --temp-dir coverage/spec/features/.nyc_output",
     "test:spec": "npm-run-all -p test:spec:*",
     "test": "npm-run-all -p lint:*:** test:**:coverage:noreport -s test:coverage",
     "watch:build": "watch \"npm-run-all build:**:src\" src",
