Run the build/test/etc scripts sequentially because parallel is confusing !

--- a/package.json
+++ b/package.json
@@ -84,23 +84,23 @@
   "scripts": {
     "build:ts:spec:features": "tsc -p spec/features",
     "build:ts:src": "tsc -p src",
-    "build:src": "npm-run-all -p build:*:**:src",
-    "build:spec": "npm-run-all -p build:*:spec:**",
-    "build": "npm-run-all -s build:src build:spec",
+    "build:src": "npm-run-all build:*:**:src",
+    "build:spec": "npm-run-all build:*:spec:**",
+    "build": "npm-run-all build:src build:spec",
     "clean": "rimraf dist coverage spec/**/*.js spec/**/*.js.map",
     "deploy": "echo \"Error: deploy script not defined\" && exit 1",
     "format:ts:spec:features": "tsfmt -r --baseDir spec/features",
     "format:ts:src": "tsfmt -r --baseDir src",
-    "format": "npm-run-all -p format:**",
+    "format": "npm-run-all format:**",
     "lint:ts:spec:features": "tslint -c tslint.json -p spec/features/tsconfig.json",
     "lint:ts:src": "tslint -c tslint.json -p src/tsconfig.json",
     "lint:src": "npm-run-all lint:*:**:src",
-    "lint": "npm-run-all -p lint:*",
+    "lint": "npm-run-all lint:*",
     "package": "npm pack",
     "publish": "npm publish",
     "predeploy": "npm run test",
     "release": "cross-env NODE_ENV=production npm-run-all clean build test",
-    "test:coverage": "npm-run-all -s test:coverage:collect test:coverage:report test:coverage:check",
+    "test:coverage": "npm-run-all test:coverage:collect test:coverage:report test:coverage:check",
     "test:coverage:collect": "rimraf coverage/combined && copyfiles -f coverage/spec/features/.nyc_output/*.* coverage/unit/.nyc_output/*.* coverage/combined/.nyc_output",
     "test:coverage:report": "nyc report --temp-dir coverage/combined/.nyc_output --report-dir coverage/combined",
     "test:coverage:check": "nyc check-coverage --temp-dir coverage/combined/.nyc_output",
@@ -112,8 +112,8 @@
     "test:spec:features:coverage": "nyc --temp-dir coverage/spec/features/.nyc_output --report-dir coverage/spec/features node -r source-map-support/register node_modules/cucumber/bin/cucumber-js spec/features",
     "test:spec:features:coverage:noreport": "nyc --temp-dir coverage/spec/features/.nyc_output -r none node -r source-map-support/register node_modules/cucumber/bin/cucumber-js spec/features",
     "test:spec:features:coverage:check": "nyc check-coverage --temp-dir coverage/spec/features/.nyc_output",
-    "test:spec": "npm-run-all -p test:spec:*",
-    "test": "npm-run-all -p lint:*:** test:**:coverage:noreport -s test:coverage",
+    "test:spec": "npm-run-all test:spec:*",
+    "test": "npm-run-all lint:*:** test:**:coverage:noreport -s test:coverage",
     "watch:build": "watch \"npm-run-all build:**:src\" src",
     "watch": "npm-run-all -p watch:**"
   },
