Update to Typescript Formatter 7 and enable Auto-Fix-On-Save for formatting and tslint

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 // Place your settings in this file to overwrite default and user settings.
 {
+  "editor.formatOnSave": true,
   "editor.rulers": [
     120
   ],
-
   "files.exclude": {
     "dist": true,
     "spec/**/*.js": true,
@@ -22,6 +22,7 @@
     "__TEST__": true
   },
   "mocha.options": {},
+  "tslint.autoFixOnSave": true,
   "tslint.enable": true,
   "tslint.ignoreDefinitionFiles": false,
   "tslint.exclude": "**/node_modules/**/*.ts",
@@ -43,11 +44,9 @@
   "typescript.format.enable": true,
   "typescript.format.insertSpaceAfterFunctionKeywordForAnonymousFunctions": false,
   "typescript.tsdk": "./node_modules/typescript/lib",
-  "typescriptHero.resolver.pathStringDelimiter": "\"",
-  "typescriptHero.restartDebugger.active": false,
   "cucumberautocomplete.steps": [
-      "spec/features/step-definitions/*.ts",
-      "node_modules/@minfos/**/automation/step-definitions.js"
+    "spec/features/step-definitions/*.ts",
+    "node_modules/@minfos/**/automation/step-definitions.js"
   ],
   "cucumberautocomplete.syncfeatures": "spec/features/*.feature",
   "cucumberautocomplete.strictGherkinCompletion": true
