Minor tidy-up; hide the .npmignore file and remove the pre-pack script

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
     "coverage": true,
     "temp": true,
     "*.tgz": true,
+    "**/.npmignore": true,
     ".serverless": true,
     ".webpack": true,
     ".nyc_output": true
