Add no unused locals rule and set VSCode to show style errors as warnings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
     "__TEST__": true
   },
   "mocha.options": {},
+  "tslint.alwaysShowRuleFailuresAsWarnings": true,
   "tslint.autoFixOnSave": true,
   "tslint.enable": true,
   "tslint.ignoreDefinitionFiles": false,
