--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -68,6 +68,9 @@
       ],
       "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
       "request": "launch",
+      "runtimeArgs": [
+        "--nolazy"
+      ],
       "sourceMaps": true,
       "stopOnEntry": false,
       "type": "node"
@@ -87,6 +90,9 @@
       ],
       "program": "${workspaceRoot}/node_modules/cucumber/bin/cucumber-js",
       "request": "launch",
+      "runtimeArgs": [
+        "--nolazy"
+      ],
       "sourceMaps": true,
       "stopOnEntry": false,
       "type": "node",
@@ -109,6 +115,9 @@
       ],
       "program": "${workspaceRoot}/node_modules/cucumber/bin/cucumber-js",
       "request": "launch",
+      "runtimeArgs": [
+        "--nolazy"
+      ],
       "sourceMaps": true,
       "stopOnEntry": false,
       "type": "node",
