--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -7,6 +7,7 @@
     "module": "commonjs",
     "outDir": "../dist",
     "sourceMap": true,
+    "noImplicitThis": true,
     "noUnusedLocals": true,
     "strict": true,
     "stripInternal": true,
