--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "author": "David Sole <david.sole@minfos.com.au>",
+  "author": "Ben Dennis <ben.dennis@minfos.com.au>",
   "bin": {},
   "bugs": {
-    "url": "https://bitbucket.org/minfos/ref-boilerplate-core/issues"
+    "url": "https://github.com/theaussiepom/soap-service/issues"
   },
   "config": {},
   "dependencies": {
+    "soap": "0.19.0",
     "tslib": "^1.9.3"
   },
-  "description": "Core boilerplate template",
+  "description": "Soap Service",
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/cucumber": "^4.0.5",
@@ -16,6 +17,7 @@
     "@types/mockery": "^1.4.29",
     "@types/node": "^8.10.45",
     "@types/sinon": "^7.0.10",
+    "@types/soap": "^0.18.0",
     "chai": "^4.2.0",
     "copyfiles": "^1.2.0",
     "cross-env": "^5.2.0",
@@ -45,10 +47,10 @@
     "dist",
     "src/**/*.ts"
   ],
-  "homepage": "https://bitbucket.org/minfos/ref-boilerplate-core#readme",
+  "homepage": "https://github.com/theaussiepom/soap-service#readme",
   "license": "UNLICENSED",
   "main": "dist/index.js",
-  "name": "@minfos/ref-boilerplate-core",
+  "name": "@theaussiepom/soap-service",
   "nyc": {
     "clean": true,
     "check-coverage": false,
@@ -75,7 +77,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://bitbucket.org/minfos/ref-boilerplate-core.git"
+    "url": "git+https://github.com/theaussiepom/soap-service.git"
   },
   "scripts": {
     "build:ts:spec:features": "tsc -p spec/features",
@@ -107,10 +109,10 @@
     "test:spec:features:coverage:noreport": "nyc --temp-dir coverage/spec/features/.nyc_output -r none node -r source-map-support/register node_modules/cucumber/bin/cucumber-js spec/features",
     "test:spec:features:coverage:check": "nyc check-coverage --temp-dir coverage/spec/features/.nyc_output",
     "test:spec": "npm-run-all test:spec:*",
-    "test": "npm-run-all lint:*:** test:**:coverage:noreport -s test:coverage",
+    "test": "npm-run-all lint:*:** test:**:coverage:noreport -s",
     "watch:build": "watch \"npm-run-all build:**:src\" src",
     "watch": "npm-run-all -p watch:**"
   },
   "typings": "./dist/index.d.ts",
-  "version": "2.1.3"
+  "version": "0.1.0"
 }
