--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "config": {},
   "dependencies": {
+    "@types/soap": "0.18.0",
     "soap": "0.19.0",
     "tslib": "^1.9.3"
   },
@@ -17,7 +18,6 @@
     "@types/mockery": "^1.4.29",
     "@types/node": "^8.10.45",
     "@types/sinon": "^7.0.10",
-    "@types/soap": "^0.18.0",
     "chai": "^4.2.0",
     "copyfiles": "^1.2.0",
     "cross-env": "^5.2.0",
